# maxxAgent

./: .env.example  .gitignore  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ADVANCED_TOPICS.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  QUALITY_METRICS.md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md
examples/: code_execution_example.py  multi_agent_example.py  rag_example.py
maxx_agent/: __init__.py  settings.py
maxx_agent/backends/: __init__.py  llm_client.py
maxx_agent/core/: __init__.py  agent.py  memory.py  tools.py
maxx_agent/execution/: __init__.py
maxx_agent/multi_agent/: __init__.py  crew.py  orchestrator.py
maxx_agent/rag/: retriever.py
maxx_agent/tools/: advanced_tools.py
maxxa_agent/: __init__.py  settings.py
maxxa_agent/backends/: __init__.py  llm_client.py
maxxa_agent/core/: agent.py  config.py  memory.py  tools.py
maxxa_agent/execution/: sandbox.py
maxxa_agent/multi_agent/: crew.py  orchestrator.py  task.py
maxxa_agent/rag/: __init__.py  loader.py  retriever.py
maxxa_agent/tools/: __init__.py  advanced_tools.py
tests/: test_smoke.py
